<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tuiaudioeffect_bgm_title">背景音乐</string>
    <string name="tuiaudioeffect_panel_close">关闭</string>
    <string name="tuiaudioeffect_panel_select_song">歌曲选择</string>

    <string name="tuiaudioeffect_bg_music_positive_happy">欢快</string>
    <string name="tuiaudioeffect_bg_music_sad_cinematic_piano">忧郁</string>
    <string name="tuiaudioeffect_bg_music_wonder_world">神奇世界</string>

    <string name="tuiaudioeffect_title">音效设置</string>

    <string name="tuiaudioeffect_panel_music_volume">音乐音量</string>
    <string name="tuiaudioeffect_panel_mic_volume">人声音量</string>
    <string name="tuiaudioeffect_panel_music_pitch">音乐升降调</string>
    <string name="tuiaudioeffect_panel_changer">变声</string>
    <string name="tuiaudioeffect_panel_reverb">混响</string>

    <string name="tuiaudioeffect_changetype_original">原声</string>
    <string name="tuiaudioeffect_changetype_child">熊孩子</string>
    <string name="tuiaudioeffect_changetype_luoli">萝莉</string>
    <string name="tuiaudioeffect_changetype_dashu">大叔</string>
    <string name="tuiaudioeffect_changetype_metal">重金属</string>
    <string name="tuiaudioeffect_changetype_sick">感冒</string>
    <string name="tuiaudioeffect_changetype_foreign">外国人</string>
    <string name="tuiaudioeffect_changetype_kunsou">困兽</string>
    <string name="tuiaudioeffect_changetype_feizai">死肥仔</string>
    <string name="tuiaudioeffect_changetype_dianliu">强电流</string>
    <string name="tuiaudioeffect_changetype_machine">重机械</string>
    <string name="tuiaudioeffect_changetype_kongling">空灵</string>

    <string name="tuiaudioeffect_reverbtype_origin">无效果</string>
    <string name="tuiaudioeffect_reverbtype_ktv">KTV</string>
    <string name="tuiaudioeffect_reverbtype_room">小房间</string>
    <string name="tuiaudioeffect_reverbtype_meeting">大会堂</string>
    <string name="tuiaudioeffect_reverbtype_lowdeep">低沉</string>
    <string name="tuiaudioeffect_reverbtype_hongliang">洪亮</string>
    <string name="tuiaudioeffect_reverbtype_heavymetal">金属声</string>
    <string name="tuiaudioeffect_reverbtype_cixing">磁性</string>


    <string name="tuiaudioeffect_back">返回</string>
    <string name="tuiaudioeffect_sound_effects">音效设置</string>
    <string name="tuiaudioeffect_ear_monitor">耳返</string>
    <string name="tuiaudioeffect_put_on_your_headphones">请带上耳机获得更好体验</string>
    <string name="tuiaudioeffect_copyright_sounds">版权曲库©</string>
</resources>
